--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.config.activate.on-profile=test
+spring.datasource.url=jdbc:mysql://localhost/legacy-med-hub-project
+spring.datasource.username=admin
+spring.datasource.password=831264
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
