--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
+		<spring-security.version>6.2.4</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +57,10 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
